--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -7,6 +7,8 @@
 	color: var(--CouleurTexteBlanc);
 	background-color: var(--CouleurBC1);
 	position: relative;
+	max-width: 1500px;
+	margin: 0 auto;
 }
 
 .contenu {
@@ -370,7 +372,8 @@
 	position: absolute;
 	background-color: var(--CouleurBC1);
 	height: 30vh;
-	width: 40%;
+	min-width: 40%;
+	max-width: 400px;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
@@ -564,6 +567,12 @@
 @media (max-width: 520px) {
 	.projet .form label span {
 		font-size: 0.6em;
+	}
+	.popup .titre {
+		font-size: 1rem;
+	}
+	.button {
+		width: 100px;
 	}
 }
 @media (max-width: 430px) {
