--- a/styles/Blogs.module.css
+++ b/styles/Blogs.module.css
@@ -16,11 +16,11 @@
 	text-transform: uppercase;
 	font-size: 3.375rem;
 	line-height: 1.2;
-
 	color: var(--CouleurTexteBlanc);
 	text-shadow: 2px 2px 4px #000;
 	border-bottom: 2px solid var(--CouleurTexteBlanc);
 }
+
 .nav {
 	display: flex;
 	justify-content: space-between;
@@ -58,7 +58,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin: 1rem 0 1rem 0;
+	margin: 0;
 	/* position: fixed;
 	left: 0%; */
 	position: sticky;
