--- a/styles/Connexion.module.css
+++ b/styles/Connexion.module.css
@@ -6,6 +6,7 @@
 	max-width: 1500px;
 	margin: 0 auto;
 }
+
 .form_container {
 	display: flex;
 	justify-content: center;
@@ -29,6 +30,7 @@
 	border-radius: 20px;
 	position: relative;
 	color: var(--CouleurTexte);
+	margin: 1rem;
 }
 @keyframes gradient {
 	0% {
@@ -114,7 +116,7 @@
 }
 
 .form label .input:placeholder-shown + span {
-	top: 15px;
+	top: 28px;
 	font-size: 0.9em;
 }
 .form label .input:focus {
@@ -122,8 +124,8 @@
 	transition: all 0.3s;
 }
 
-.form label .input:focus + span,
-.form label .input:valid + span {
+.form label .input:focus ~ span,
+.form label .input:valid ~ span {
 	top: 30px;
 	font-size: 0.7em;
 	font-weight: 600;
@@ -407,7 +409,7 @@
 	position: absolute;
 	background-color: var(--CouleurBC1);
 	height: 30vh;
-	width: 40%;
+	min-width: 40%;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
@@ -459,7 +461,7 @@
 	color: #fff;
 	cursor: pointer;
 	text-align: center;
-	width: 150px;
+	width: 120px;
 }
 
 .popup .button:hover {
