--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -4,7 +4,7 @@
 	align-items: center;
 	/* justify-content: space-between; */
 	color: var(--CouleurTexteBlanc);
-	padding: 2rem;
+	padding: 2rem 1rem;
 	min-height: 9rem;
 	position: relative;
 	bottom: 0;
