--- a/styles/ProjetsRecents.module.css
+++ b/styles/ProjetsRecents.module.css
@@ -70,7 +70,7 @@
 }
 
 .boxProjet a:nth-child(1) h3 {
-	max-width: 30%;
+	max-width: 43%;
 }
 .boxProjet a > div {
 	width: 70%;
@@ -88,7 +88,7 @@
 		linear-gradient(145deg, transparent 0%, var(--CouleurStyleRouge), var(--CouleurTexteJaune)) border-box;
 	border: 1px solid transparent;
 	background-size: 200% 100%;
-	animation: gradient 5s ease infinite;
+	/* animation: gradient 5s ease infinite; */
 	width: 100%;
 	height: 100%;
 	object-fit: contain;
@@ -98,7 +98,7 @@
 		var(--CouleurStyleRouge) border-box;
 	border: 1px solid transparent;
 	background-size: 200% 100%;
-	animation: gradient 5s ease infinite;
+	/* animation: gradient 5s ease infinite; */
 	width: 100%;
 	height: 100%;
 	object-fit: contain;
